fixed bug where user couldnt draw on mobile

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -30,6 +30,7 @@ input {
   border: none;
   background: none;
   font: inherit;
+  touch-action: none;
 }
 
 textarea {
